Move gallery lightbox media badge to bottom-left to avoid counter overlap

--- a/src/Recollections.Blazor.UI/wwwroot/css/_gallery.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/_gallery.scss
@@ -27,7 +27,7 @@ video.pswp__video {
 
 .pswp__media-type-badge {
     position: absolute;
-    top: 20px;
+    bottom: 60px;
     left: 20px;
     background: rgba(0, 0, 0, 0.55);
     color: white;
